# RubiksCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  GenericRubiksCube.cpp  GenericRubiksCube.h  IDAStarSolver.h  IDDFS.h  README.md  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  main.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFS.h
